# docster

./: .gitignore  Cargo.toml  LICENSE  test.md
src/: handler.rs  main.rs  vector_store.rs
src/chat/: apis.rs  deepseek.rs  mod.rs
src/db/: mod.rs  qa.rs  schema.sql
src/document/: chunk.rs  docx.rs  mod.rs  pdf.rs
src/embedding/: mod.rs  zhipu.rs
src/handler/: document.rs  query.rs  write.rs
