[package]
name = "docster"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
anyhow = "1.0.97"
async-trait = "0.1.77"
chromadb = { version = "2.2.2", features = ["openai"] }
clap = { version = "4.5.35", features = ["derive"] }
dotenv = "0.15.0"
jieba-rs = "0.7.2"
openai = "1.1.0"
pdf-extract = "0.9.0"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.12.0", features = ["serde"] }
log = "0.4.27"
config = "0.15.11"
docx-rs = "0.4.17"
chrono = { version = "0.4.38", features = ["serde"] }
rust_xlsxwriter = "0.32.0"
